# ts-app-1806

./: .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose-deploy.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
app_ts/: asgi.py  settings.py  urls.py  wsgi.py
app_ts/core/: apps.py
app_ts/core/static/css/: main.css
app_ts/core/templates/: base.html  footer.html  home.html  nav.html
app_ts/core/tests/: test_view_home.py
app_ts/subscriptions/: apps.py  forms.py  models.py  urls.py  validators.py  views.py
app_ts/subscriptions/migrations/: 0001_initial.py
app_ts/subscriptions/templates/subscription/: detail_subscription.html  search.html  subscription_added.html  subscription_list.html
app_ts/subscriptions/tests/: test_form_subscription.py  test_model_subscription.py  test_view_create.py  test_view_detail.py
proxy/: Dockerfile  default.conf
scripts/: entrypoint.sh
