[tool.poetry]
name = "ts-app-1806"
version = "0.1.0"
description = ""
authors = ["Victor Hugo <victorblog410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-pytest = "^0.2.0"
psycopg2-binary = "^2.9.1"
flake8 = "^3.9.2"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
